# fma

./: .babelrc  CMakeLists.txt  LICENSE.md  README.adoc  README.md  engine.pasm  index.js  package-lock.json  package.json  test.js  test.pasm
fma/: CMakeLists.txt
fma/include/: Application.hpp  Options.hpp
fma/src/: Application.cpp  Options.cpp  main.cpp
fma65816/: CMakeLists.txt  fma65816.pc.in
fma65816/include/binary/: Plugin.hpp  PluginAdapter.hpp
fma65816/include/bp/: Plugin.hpp
fma65816/include/lang/: InstructionArguments.hpp  MoveBlock.hpp  Plugin.hpp  Register.hpp
fma65816/include/output/: Plugin.hpp
fma65816/include/sym/: Plugin.hpp
fma65816/src/: main.cpp
fma65816/src/binary/: Plugin.cpp  PluginAdapter.cpp
fma65816/src/bp/: Plugin.cpp
fma65816/src/lang/: InstructionArguments.cpp  Plugin.cpp  Register.cpp
fma65816/src/output/: Plugin.cpp
fma65816/src/sym/: Plugin.cpp
fmacpp/: CMakeLists.txt  fmacpp.pc.in
fmacpp/include/binary/: CodeSection.hpp  Plugin.hpp  PluginAdapter.hpp
fmacpp/include/output/: Plugin.hpp
fmacpp/lib/fmacpp/: fmacppdriver.hpp  fmacpplib.hpp
fmacpp/src/: main.cpp
fmacpp/src/binary/: CodeSection.cpp  Plugin.cpp  PluginAdapter.cpp
fmacpp/src/output/: Plugin.cpp
fmacsv/: CMakeLists.txt  fmacsv.pc.in
fmacsv/include/aria/: csv.hpp
fmacsv/include/csv/: CsvClass.hpp  Plugin.hpp
fmacsv/src/: main.cpp
fmacsv/src/csv/: CsvClass.cpp  Plugin.cpp
fmafs/: CMakeLists.txt  fmafs.pc.in
fmafs/include/fs/: DirClass.hpp  FileClass.hpp  Plugin.hpp
fmafs/src/: main.cpp
fmafs/src/fs/: DirClass.cpp  FileClass.cpp  Plugin.cpp
fmaimage/: CMakeLists.txt  fmaimage.pc.in
fmaimage/include/image/: BaseCanvasClass.hpp  Canvas.hpp  CanvasAccessor.hpp  CanvasArrayClass.hpp  CanvasClass.hpp  CanvasView.hpp  CanvasViewClass.hpp  Color.hpp  ImageClass.hpp  ImageCollection.hpp  ImageCollectionClass.hpp  ImageCollectionItemClass.hpp  Palette.hpp  PaletteArrayClass.hpp  PaletteClass.hpp  PixelClass.hpp  Plugin.hpp
fmaimage/src/: main.cpp
fmaimage/src/image/: BaseCanvasClass.cpp  Canvas.cpp  CanvasAccessor.cpp  CanvasArrayClass.cpp  CanvasClass.cpp  CanvasView.cpp  CanvasViewClass.cpp  Color.cpp  ImageClass.cpp  ImageCollection.cpp  ImageCollectionClass.cpp  ImageCollectionItemClass.cpp  Palette.cpp  PaletteArrayClass.cpp  PaletteClass.cpp  PixelClass.cpp  Plugin.cpp
fmajs/: CMakeLists.txt
fmajs/include/: AstNode.hpp  Interpreter.hpp  Parser.hpp  Project.hpp
fmajs/src/: AstNode.cpp  Interpreter.cpp  Parser.cpp  Project.cpp  main.cpp
fmajson/: CMakeLists.txt  fmajson.pc.in
fmajson/include/json/: JsonClass.hpp  JsonSax.hpp  Plugin.hpp
fmajson/include/nlohmann/: json.hpp
fmajson/src/: main.cpp
fmajson/src/json/: JsonClass.cpp  JsonSax.cpp  Plugin.cpp
fmamemory/: CMakeLists.txt  fmamemory.pc.in
fmamemory/include/memory/: ArrayMemberClassInstance.hpp  Configuration.hpp  MemoryAdapter.hpp  MemoryAllocation.hpp  MemoryAllocationList.hpp  MemoryBlock.hpp  MemoryClassMemberItem.hpp  MemoryClassMembers.hpp  MemoryDeclarationClass.hpp  MemoryLocationConstraint.hpp  MemoryLocationList.hpp  MemoryMap.hpp  MemoryMapBank.hpp  MemoryMapBankSection.hpp  MemoryMapClass.hpp  MemoryMapShadow.hpp  MemoryPlacement.hpp  MemoryScope.hpp  MemoryScopeClass.hpp  MemorySymbolMap.hpp  MemoryVariableClass.hpp  MemoryVariablePointerClass.hpp  Plugin.hpp
fmamemory/include/placer/: MergedUsageMap.hpp  Placer.hpp  PlacerMemoryMap.hpp  PlacerMemoryMapBank.hpp  PlacerNode.hpp  PlacerPriority.hpp  PlacerRoute.hpp  PlacerScopeNode.hpp  PlacerState.hpp  PlacerStatePointer.hpp  RootPlacerMemoryMap.hpp  UsageMap.hpp
fmamemory/include/schema/: Plugin.hpp
fmamemory/src/: main.cpp
fmamemory/src/memory/: ArrayMemberClassInstance.cpp  MemoryAdapter.cpp  MemoryAllocation.cpp  MemoryBlock.cpp  MemoryClassMemberItem.cpp  MemoryClassMembers.cpp  MemoryDeclarationClass.cpp  MemoryLocationConstraint.cpp  MemoryLocationList.cpp  MemoryMap.cpp  MemoryMapBank.cpp  MemoryMapBankSection.cpp  MemoryMapClass.cpp  MemoryMapShadow.cpp  MemoryPlacement.cpp  MemoryScope.cpp  MemoryScopeClass.cpp  MemorySymbolMap.cpp  MemoryVariableClass.cpp  MemoryVariablePointerClass.cpp  Plugin.cpp
fmamemory/src/placer/: MergedUsageMap.cpp  Placer.cpp  PlacerMemoryMap.cpp  PlacerMemoryMapBank.cpp  PlacerNode.cpp  PlacerPriority.cpp  PlacerRoute.cpp  PlacerScopeNode.cpp  PlacerState.cpp  PlacerStatePointer.cpp  RootPlacerMemoryMap.cpp  UsageMap.cpp
fmamemory/src/schema/: Plugin.cpp
fmaspc/: CMakeLists.txt  fmaspc.pc.in
fmaspc/include/binary/: Plugin.hpp  PluginAdapter.hpp
fmaspc/include/lang/: InstructionArguments.hpp  Plugin.hpp  Register.hpp
fmaspc/include/output/: Plugin.hpp
fmaspc/include/sym/: Plugin.hpp
fmaspc/src/: main.cpp
fmaspc/src/binary/: Plugin.cpp  PluginAdapter.cpp
fmaspc/src/lang/: InstructionArguments.cpp  Plugin.cpp  Register.cpp
fmaspc/src/output/: Plugin.cpp
fmaspc/src/sym/: Plugin.cpp
fmasuperfx/: CMakeLists.txt  fmasuperfx.pc.in
fmasuperfx/include/superfx/: InstructionArguments.hpp  Plugin.hpp  Register.hpp  SuperFxDataBlockClass.hpp
fmasuperfx/src/: main.cpp
fmasuperfx/src/superfx/: InstructionArguments.cpp  Plugin.cpp  Register.cpp  SuperFxDataBlockClass.cpp
libfma/: CMakeLists.txt  libfma.pc.in
libfma/grammar/: fma.l  fma.y
libfma/include/fma/: Error.hpp  File.hpp  FileMap.hpp  Log.hpp  Parser.hpp  Project.hpp  Reference.hpp  Version.hpp
libfma/include/fma/assem/: BinaryCodeGenerator.hpp  BinaryCodeGeneratorScope.hpp  BitMaskOperand.hpp  ConstantNumberOperand.hpp  DirectPageOperand.hpp  FlagOperand.hpp  Instruction.hpp  LabelInstruction.hpp  LocalAddressOperand.hpp  MemoryAddressOperand.hpp  Operand.hpp  PcRelativeAddressOperand.hpp  RegisterOperand.hpp  RelativeAddressOperand.hpp  (+2 more)
libfma/src/fma/: File.cpp  FileMap.cpp  Log.cpp  Parser.cpp  Project.cpp  Reference.cpp  Version.cpp  main.cpp
tests/: CMakeLists.txt  test_fma.cpp
tests/fma/: array.fma  classes.fma  macros.fma  map.fma  memory.fma  modules.fma  primitives.fma  range.fma  statements.fma  strings.fma  variables.fma
tests/fmacpp/: test.fma
(+469 files in other folders)
